Updated About File

--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
 	<title>FernFerret/diversit @ GitHub</title>
 	
 	<style type="text/css">
-		body {
-  		margin-top: 1.0em;
-  		background-color: #29a832;
-		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+    body {
+      background-image:url('https://github.com/FernFerret/diversit/raw/master/public/images/bg.png');
+      background-repeat:repeat;
+      color:#a0a0a0;
+      font-family:verdana,sans-serif;
+      font-size:100%;
+      text-shadow: 0px 0px 1px #404040;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-		h1 { font-size: 3.8em; color: #d657cd; margin-bottom: 3px; }
+		h1 { font-size: 3.8em; margin-bottom: 3px; color:#18CC45;}
 		h1 .small { font-size: 0.4em; }
+		h1 .smaller { font-size: 0.35em; }
 		h1 a { text-decoration: none }
-		h2 { font-size: 1.5em; color: #d657cd; }
-    h3 { text-align: center; color: #d657cd; }
-    a { color: #d657cd; }
+		h2 { font-size: 1.5em; color:#18CC45;}
+    h3 { text-align: center; color:#18CC45;}
+    a { color: #25E856; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
@@ -46,16 +49,18 @@
     </div>
 
     <h1><a href="http://github.com/FernFerret/diversit">diversIT</a>
-      <span class="small">by <a href="http://github.com/FernFerret">FernFerret</a></span></h1>
+      <br /><span class="small">by <a href="http://github.com/FernFerret">Eric Stokes</a> &amp; <a href="http://github.com/kennygao">Kenny Gao</a></span></h1>
 
     <div class="description">
       DiversIT is a web application that allows individuals to connect with others giving the ability go step outside their traditional social groups and interact in a more diverse way.
     </div>
 
     <p>The world is a mosaic of unique individuals. It is easy, however, to take people's differences for granted. Many people have stereotypes and perceptions of others that conceal the truth about differences between them. In order to help people appreciate differences about one another, we designed DiversIT, which facilitates communication between all people by leveraging the power of the Internet. By centering discussion on a daily question, DiversIT establishes common ground through which people can begin interacting. This increased communication can lead to an improved understanding of each other. DiversIT was developed with user-centered design processes, incorporating potential users into every part of the design process.</p><h2>Authors</h2>
-<p>Eric Stokes (stokesej@gmail.com)<br/>Kenny Gao (gaot@rose-hulman.edu)<br/>Tim Ekl (ekltl@gmail.com)<br/>Sarah Jabon (jabonsa@rose-hulman.edu)<br/>Joe Salisbury (salisbjm@rose-hulman.edu)</p>
-<h2>Contact</h2>
-<p>Eric Stokes (fernferret@gmail.com)<br/>      </p>
+<p>Eric Stokes (stokesej@gmail.com)
+<br/>Kenny Gao (gaot@rose-hulman.edu)
+<br/>Tim Ekl (ekltl@gmail.com)
+<br/>Sarah Jabon (jabonsa@rose-hulman.edu)
+<br/>Joe Salisbury (salisbjm@rose-hulman.edu)</p>
 
 
     <h2>Download</h2>
