Final revisions to the git readme

--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/FernFerret/diversit">diversIT</a>
-      <br /><span class="small">by <a href="http://github.com/FernFerret">Eric Stokes</a> &amp; <a href="http://github.com/kennygao">Kenny Gao</a></span></h1>
+    <!-- <h1><img src="logo.png" /><a href="http://github.com/FernFerret/diversit">diversIT</a>
+      <br /><span class="small">by <a href="http://github.com/FernFerret">Eric Stokes</a> &amp; <a href="http://github.com/kennygao">Kenny Gao</a></span></h1> -->
+
+      <h1><a href="http://github.com/FernFerret/diversit" border="0"><img src="logo.png" /></a></h1>
 
     <div class="description">
       DiversIT is a web application that allows individuals to connect with others giving the ability go step outside their traditional social groups and interact in a more diverse way.
     </div>
 
     <p>The world is a mosaic of unique individuals. It is easy, however, to take people's differences for granted. Many people have stereotypes and perceptions of others that conceal the truth about differences between them. In order to help people appreciate differences about one another, we designed DiversIT, which facilitates communication between all people by leveraging the power of the Internet. By centering discussion on a daily question, DiversIT establishes common ground through which people can begin interacting. This increased communication can lead to an improved understanding of each other. DiversIT was developed with user-centered design processes, incorporating potential users into every part of the design process.</p><h2>Authors</h2>
-<p>Eric Stokes (stokesej@gmail.com)
+<p>Tim Ekl (ekltl@gmail.com)
 <br/>Kenny Gao (gaot@rose-hulman.edu)
-<br/>Tim Ekl (ekltl@gmail.com)
 <br/>Sarah Jabon (jabonsa@rose-hulman.edu)
-<br/>Joe Salisbury (salisbjm@rose-hulman.edu)</p>
+<br/>Joe Salisbury (salisbjm@rose-hulman.edu)
+<br />Eric Stokes (fernferret@gmail.com)</p>
 
 
     <h2>Download</h2>
