Add new mobile files

--- a/mobile.html
+++ b/mobile.html
@@ -17,17 +17,18 @@
       text-shadow: 0px 0px 1px #404040;
     }
     #container {
-      margin: 0 auto;
-      width: 700px;
+      margin: 5px auto;
+/*      width: 700px;*/
     }
-		h1 { font-size: 3.8em; margin-bottom: 3px; color:#18CC45;}
+		h1 { font-size: 3.8em; margin-bottom: 3px; color:#18CC45; margin-left: auto; margin-right:auto;}
 		h1 .small { font-size: 0.4em; }
 		h1 .smaller { font-size: 0.35em; }
+		.logo{margin-left: auto; margin-right:auto; width:300px}
 		h1 a { text-decoration: none }
 		h2 { font-size: 1.5em; color:#18CC45;}
     h3 { text-align: center; color:#18CC45;}
     a { color: #25E856; }
-    .description { font-size: 5em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
+    .description { font-size: 2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
 		pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
@@ -37,10 +38,10 @@
 </head>
 
 <body>
-  <a href="http://github.com/FernFerret/diversit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/FernFerret/diversit"><img style="position: absolute; top: 0; right: 0; border: 0;" src="forkme.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
-      <h1><a href="http://github.com/FernFerret/diversit" border="0"><img src="logo.png" /></a></h1>
+    <div class="logo"><img src="logo.png" /></div>
 
     <div class="description">
       DiversIT is a web application that allows individuals to connect with others giving the ability go step outside their traditional social groups and interact in a more diverse way.
